@@ -1,3 +1,9 @@
+2020-03-22  Frank Ch. Eigler  <fche@redhat.com>
+
+	* debuginfod_get_user.3, _set_user.3: New functions, documented ...
+	* debuginfod_find_debuginfo.3: ... here.
+	* Makefile.am (notrans_dist_*_man3): List all debuginfod .3 functions.
+
 2020-02-25  Frank Ch. Eigler  <fche@redhat.com>
 
 	* debuginfod.8: Note that -R works just like -Z.rpm .
